--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,14 @@ p {
     margin-bottom: 20px;
 }
 
+#main-form {
+    text-align: center;
+}
+
 #main-div {
     text-align: center;
     margin-top: 100px;
+    visibility: hidden;
 }
 
 .row {
