Add gameboard.js module. Add player 1 input functionality to script.js and index.html

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@ p {
     visibility: hidden;
 }
 
+#player1-input-form{
+    text-align: center;
+    visibility: hidden;
+}
+
 .row {
     padding-bottom: 5px;
     font-size: xx-large;
